hard-gists/cf2b4e56fe28835c3ceb/run.log
=== Docker Run Log for cf2b4e56fe28835c3ceb ===
Started at: Mi 29. Okt 20:19:19 CET 2025

[2025-10-29 20:19:19] START: Running container for cf2b4e56fe28835c3ceb
[2025-10-29 20:19:20] SUCCESS: Container 2f618f0847f3f38a071f83dc6c195a9a905dafa1d83c03a212dd2bd10e5eef67 started for cf2b4e56fe28835c3ceb
=== Container logs for cf2b4e56fe28835c3ceb ===
  File "/snippet.py", line 21
    print "[+] username = " + username + " password = " + password
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for cf2b4e56fe28835c3ceb ===
[2025-10-29 20:19:22] INFO: Container 2f618f0847f3f38a071f83dc6c195a9a905dafa1d83c03a212dd2bd10e5eef67 has stopped
